Minor Fix and placeholder data add.